# 117_final

./: .gitignore  README.md  main.py  parsing.ipynb  pyproject.toml  selectpoints.py  street_correspondences.pckl  video_retrieval.py
final/: mesh_utils.py  plot_utils.py  splitting_vids.ipynb  videoretrieval.py  visutils.py
final/code/: parsing copy.ipynb
