[project]
name = "117-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=6.1.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.11.0",
    "ultralytics>=8.4.60",
]
